--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>SetiMutants</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8" />
+    <title>SetiMutants</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+
 <body>
-  <app-root></app-root>
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+    <app-root></app-root>
 </body>
+
 </html>
